--- a/css/style.css
+++ b/css/style.css
@@ -10766,11 +10766,11 @@ i.fa.fa-whatsapp {
 }
 
 .ramadanOffers .causes .img {
-  width: 100%;
+  width: 100% !important;
   height: 536px;
   /* margin: 0 auto; */
   position: relative;
   overflow: hidden;
   display: block;
-  border-radius: 50% 0 0 0;
+  border-radius: 10% 0 0 0;
 }
